# codeweave-agent

./: README.md  pyproject.toml
src/codeweave/: __init__.py  __main__.py  agent.py  config.py  models.py  permissions.py  prompts.py  tools.py
src/codeweave/providers/: __init__.py  anthropic.py  base.py  factory.py  fake.py  openai.py
tests/: test_agent_runtime.py  test_foundation.py  test_permissions.py  test_prompts.py  test_protocols.py  test_tools.py
