[project]
name = "codeweave-agent"
version = "0.1.0"
description = "A terminal AI coding assistant rebuilt chapter by chapter"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.47.0",
    "openai>=1.60.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
codeweave = "codeweave.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeweave"]
